# esp32-c6-chushi

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/battery/: CMakeLists.txt  battery.c
components/battery/include/: battery.h
components/dns/: CMakeLists.txt  dns_server.c
components/dns/include/: dns_server.h
components/eeg/: CMakeLists.txt  eeg.c
components/eeg/include/: ads129x.h  eeg.h
components/fnirs/: CMakeLists.txt  fnirs.c
components/fnirs/include/: fnirs.h
components/httpd/: CMakeLists.txt  index.html  web_server.c
components/httpd/include/: web_server.h
components/key/: CMakeLists.txt  key.c
components/key/include/: key.h
components/led/: CMakeLists.txt  led.c
components/led/include/: led.h
components/my_ble/: CMakeLists.txt  my_ble.c
components/my_ble/include/: my_ble.h
components/tcp_communication/: CMakeLists.txt  tcp_communication.c
components/tcp_communication/include/: tcp_communication.h
components/uart/: CMakeLists.txt  uart.c
components/uart/include/: uart.h
components/utils/: CMakeLists.txt  utils.c
components/utils/include/: utils.h
components/version/: CMakeLists.txt  version.c
components/version/include/: version.h
components/wifi/: CMakeLists.txt  wifi.c
components/wifi/include/: wifi.h
main/: CMakeLists.txt  main.c
