idf_component_register(SRCS "dns_server.c"
					INCLUDE_DIRS "include" 
					PRIV_INCLUDE_DIRS   "${IDF_PATH}/components/esp_http_server/include"
										"${IDF_PATH}/components/nvs_flash/include"
										"${IDF_PATH}/components/esp_partition/include"
										"${IDF_PATH}/components/esp_wifi/include"
										"${IDF_PATH}/components/esp_event/include"
										"${IDF_PATH}/components/esp_netif/include"
					REQUIRES ""
					)
